feat: Update app to Sephora Rewards program
Rebranded the application from Walmart Rewards to Sephora Rewards. This includes updating the title, metadata, color schemes, and copy throughout the application to reflect the new branding and offerings. The core functionality remains the same but is now presented within the Sephora Rewards context.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Walmart Rewards</title>
+    <title>Sephora Rewards</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -24,11 +24,10 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              walmart: {
-                blue: '#0071dc',
-                yellow: '#ffc220',
-                dark: '#2e2f32',
-                teal: '#00aeb6'
+              sephora: {
+                black: '#000000',
+                red: '#CE0E2D',
+                gray: '#F2F2F2'
               }
             }
           }
