--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sephora Rewards</title>
+    <title>Costco Rewards</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
@@ -24,10 +24,10 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              sephora: {
-                black: '#000000',
-                red: '#CE0E2D',
-                gray: '#F2F2F2'
+              costco: {
+                blue: '#005DAA',
+                red: '#E31837',
+                gray: '#EEEEEE'
               }
             }
           }
